src/test/deca/syntax/invalid/if-wrong-order.lex
OBRACE: [@0,163:163='{',<8>,10:0]
IF: [@1,169:170='if',<20>,11:4]
OPARENT: [@2,171:171='(',<10>,11:6]
TRUE: [@3,172:175='true',<16>,11:7]
CPARENT: [@4,176:176=')',<11>,11:11]
OBRACE: [@5,178:178='{',<8>,11:13]
CBRACE: [@6,179:179='}',<9>,11:14]
ELSE: [@7,181:184='else',<21>,11:16]
OBRACE: [@8,186:186='{',<8>,11:21]
CBRACE: [@9,187:187='}',<9>,11:22]
ELSE: [@10,189:192='else',<21>,11:24]
IF: [@11,194:195='if',<20>,11:29]
OPARENT: [@12,196:196='(',<10>,11:31]
FALSE: [@13,197:201='false',<17>,11:32]
CPARENT: [@14,202:202=')',<11>,11:37]
OBRACE: [@15,204:204='{',<8>,11:39]
CBRACE: [@16,205:205='}',<9>,11:40]
CBRACE: [@17,207:207='}',<9>,12:0]
